apps/kodi-connect/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kodi-connect
  name: kodi-connect
