apps/kodi-connect/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kodiconnect-app
  namespace: kodi-connect
spec:
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
  selector:
    app: kodiconnect-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kodiconnect
  namespace: kodi-connect
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/buffering: |
      maxrequestbodybytes: 31457280
      memrequestbodybytes: 62914560
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - kodiconnect.kislan.sk
      secretName: kodiconnect-kislan-sk
  rules:
    - host: kodiconnect.kislan.sk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kodiconnect-app
                port:
                  number: 3005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kodiconnect-app
  namespace: kodi-connect
  annotations:
    fluxcd.io/automated: "false"
spec:
  selector:
    matchLabels:
      app: kodiconnect-app
  replicas: 1
  template:
    metadata:
      labels:
        app: kodiconnect-app
    spec:
      serviceAccountName: kodi-connect
      containers:
        - name: kodiconnect-app
          image: kodiconnect/kodi-connect:master
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 200Mi
